--- a/T03/kmeans.ipynb
+++ b/T03/kmeans.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Equipe\n",
+    "Cleverton Carneiro, Gustavo Cordeiro e Igor Latini"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
