--- a/APS01/titanic_projeto01.ipynb
+++ b/APS01/titanic_projeto01.ipynb
@@ -3338,7 +3338,7 @@
    "metadata": {},
    "source": [
     "### Conclusão:\n",
-    " - percebemos que a base __less__ para alguns modelos apresenta um melhor resultado em relação a base __less__, considerando que ambas tem o mesmo número de colunas.\n",
+    " - percebemos que a base __less__ apresenta um melhor resultado em relação a base __pca16__ para 3 dos 4 modelos, considerando que ambas tem o mesmo número de colunas.\n",
     " - pela a nossa avaliação os melhores modelos são: __Decision Tree__ utilizando a base __less__ e __Random Forest__ utilizando a base __pca16__.\n",
     " - menção honrosa ao modelo __Decision Tree__ utilizando a base __Full__, com o parâmetro max_depth = 3 já apresenta bons resultados. Portanto, consiste em um modelo mais parcimonioso. \n"
    ]
