--- a/T03/Visualizing K-Means with Leaf Dataset.ipynb
+++ b/T03/Visualizing K-Means with Leaf Dataset.ipynb
@@ -472,7 +472,7 @@
     "        plt.show()\n",
     "\n",
     "\n",
-    "    def ShowTemplatesInPCASpace(self, X, y=None, tSNE_perplexity=30.0, colorMap='Paired'):\n",
+    "    def ShowTemplatesInPCASpace(self, X, y=None, tSNE_perplexity=30.0, colorMap=):\n",
     "        # show the templates in the 2PC space and the tSNE of the entire PCA space\n",
     "        \n",
     "        # build PCA model and project the data onto the PCA space\n",
@@ -767,6 +767,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "_cell_guid": "216500a8-ae94-fe97-495d-feccba5edf60",
@@ -791,6 +798,13 @@
     "\n",
     "templateModel.ShowTemplatesInPCASpace(X, y=None, tSNE_perplexity=15.0, colorMap='Paired')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1205,7 +1219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
