--- a/APS01/titanic_projeto01.ipynb
+++ b/APS01/titanic_projeto01.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Equipe:\n",
-    "Cleverton Carneiro, Gustavo Cordeiro e Igor Pardal Latini"
+    "Cleverton Carneiro, Gustavo Cordeiro e Igor Pardal"
    ]
   },
   {
@@ -3354,9 +3354,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "py3im",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3im"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3368,7 +3368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
