--- a/APS02/Dogs vs. Cats/Modelos.ipynb
+++ b/APS02/Dogs vs. Cats/Modelos.ipynb
@@ -30,12 +30,15 @@
     "from skimage.feature import greycomatrix, greycoprops\n",
     "from skimage.feature import hog\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +47,7 @@
        "((25000, 2500), (25000, 1))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +69,7 @@
        "((20556, 2500), (4444, 2500))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,16 +92,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 2s, sys: 2.42 ms, total: 1min 2s\n",
-      "Wall time: 1min 3s\n"
+      "Wall time: 50.2 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=4, penalty='l2',\n",
+       "                   random_state=None, solver='saga', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -109,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +201,7 @@
        "support    2222.000000  2222.000000  0.713096  4444.000000   4444.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,16 +222,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.08 s, sys: 37 µs, total: 6.08 s\n",
-      "Wall time: 6.18 s\n"
+      "Wall time: 5.97 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=4, penalty='l2',\n",
+       "                   random_state=None, solver='saga', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -226,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +331,7 @@
        "support    2222.000000  2222.000000  0.734473  4444.000000   4444.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,36 +347,276 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SVM"
+    "# Linear SVM\n",
+    "Classificador SVM otimizado para o kernel linear, pode não dar o mesmo \n",
+    "resultado se comparado ao sklearn.svm.SVC(), mas tem um tempo de execução menor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2min 26s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "          intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+       "          verbose=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "svclassifier = LinearSVC()\n",
+    "svclassifier.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.673557</td>\n",
+       "      <td>0.672526</td>\n",
+       "      <td>0.673042</td>\n",
+       "      <td>0.673041</td>\n",
+       "      <td>0.673041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.672499</td>\n",
+       "      <td>0.673589</td>\n",
+       "      <td>0.673042</td>\n",
+       "      <td>0.673044</td>\n",
+       "      <td>0.673044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.674617</td>\n",
+       "      <td>0.671467</td>\n",
+       "      <td>0.673042</td>\n",
+       "      <td>0.673042</td>\n",
+       "      <td>0.673042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>0.673042</td>\n",
+       "      <td>4444.000000</td>\n",
+       "      <td>4444.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat          dog  accuracy    macro avg  weighted avg\n",
+       "f1-score      0.673557     0.672526  0.673042     0.673041      0.673041\n",
+       "precision     0.672499     0.673589  0.673042     0.673044      0.673044\n",
+       "recall        0.674617     0.671467  0.673042     0.673042      0.673042\n",
+       "support    2222.000000  2222.000000  0.673042  4444.000000   4444.000000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = svclassifier.predict(X_test)\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Polinomial SVM\n",
+    "A função polinomial de 3° grau é a escolhida para o kernel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teste com as 5000 primeiras amostras:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1min 30s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='poly', max_iter=-1, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.002, verbose=False)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "polysvclassifier = SVC(kernel='poly', tol=0.002)\n",
+    "polysvclassifier.fit(X_train.head(5000), y_train.head(5000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.493930</td>\n",
+       "      <td>0.689893</td>\n",
+       "      <td>0.615437</td>\n",
+       "      <td>0.591911</td>\n",
+       "      <td>0.591911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.722078</td>\n",
+       "      <td>0.577987</td>\n",
+       "      <td>0.615437</td>\n",
+       "      <td>0.650033</td>\n",
+       "      <td>0.650033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.375338</td>\n",
+       "      <td>0.855536</td>\n",
+       "      <td>0.615437</td>\n",
+       "      <td>0.615437</td>\n",
+       "      <td>0.615437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>0.615437</td>\n",
+       "      <td>4444.000000</td>\n",
+       "      <td>4444.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat          dog  accuracy    macro avg  weighted avg\n",
+       "f1-score      0.493930     0.689893  0.615437     0.591911      0.591911\n",
+       "precision     0.722078     0.577987  0.615437     0.650033      0.650033\n",
+       "recall        0.375338     0.855536  0.615437     0.615437      0.615437\n",
+       "support    2222.000000  2222.000000  0.615437  4444.000000   4444.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = polysvclassifier.predict(X_test)\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3im",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3im"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -359,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
