update dos resultados de saida

--- a/APS02/Dogs vs. Cats/Modelos.ipynb
+++ b/APS02/Dogs vs. Cats/Modelos.ipynb
@@ -491,14 +491,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 30s\n"
+      "Wall time: 27min 47s\n"
      ]
     },
     {
@@ -510,7 +510,7 @@
        "    shrinking=True, tol=0.002, verbose=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,12 +518,12 @@
    "source": [
     "%%time\n",
     "polysvclassifier = SVC(kernel='poly', tol=0.002)\n",
-    "polysvclassifier.fit(X_train.head(5000), y_train.head(5000))"
+    "polysvclassifier.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -557,33 +557,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>f1-score</th>\n",
-       "      <td>0.493930</td>\n",
-       "      <td>0.689893</td>\n",
-       "      <td>0.615437</td>\n",
-       "      <td>0.591911</td>\n",
-       "      <td>0.591911</td>\n",
+       "      <td>0.612202</td>\n",
+       "      <td>0.707832</td>\n",
+       "      <td>0.666742</td>\n",
+       "      <td>0.660017</td>\n",
+       "      <td>0.660017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>precision</th>\n",
-       "      <td>0.722078</td>\n",
-       "      <td>0.577987</td>\n",
-       "      <td>0.615437</td>\n",
-       "      <td>0.650033</td>\n",
-       "      <td>0.650033</td>\n",
+       "      <td>0.731997</td>\n",
+       "      <td>0.630137</td>\n",
+       "      <td>0.666742</td>\n",
+       "      <td>0.681067</td>\n",
+       "      <td>0.681067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.375338</td>\n",
-       "      <td>0.855536</td>\n",
-       "      <td>0.615437</td>\n",
-       "      <td>0.615437</td>\n",
-       "      <td>0.615437</td>\n",
+       "      <td>0.526103</td>\n",
+       "      <td>0.807381</td>\n",
+       "      <td>0.666742</td>\n",
+       "      <td>0.666742</td>\n",
+       "      <td>0.666742</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>support</th>\n",
        "      <td>2222.000000</td>\n",
        "      <td>2222.000000</td>\n",
-       "      <td>0.615437</td>\n",
+       "      <td>0.666742</td>\n",
        "      <td>4444.000000</td>\n",
        "      <td>4444.000000</td>\n",
        "    </tr>\n",
@@ -593,13 +593,13 @@
       ],
       "text/plain": [
        "                   cat          dog  accuracy    macro avg  weighted avg\n",
-       "f1-score      0.493930     0.689893  0.615437     0.591911      0.591911\n",
-       "precision     0.722078     0.577987  0.615437     0.650033      0.650033\n",
-       "recall        0.375338     0.855536  0.615437     0.615437      0.615437\n",
-       "support    2222.000000  2222.000000  0.615437  4444.000000   4444.000000"
+       "f1-score      0.612202     0.707832  0.666742     0.660017      0.660017\n",
+       "precision     0.731997     0.630137  0.666742     0.681067      0.681067\n",
+       "recall        0.526103     0.807381  0.666742     0.666742      0.666742\n",
+       "support    2222.000000  2222.000000  0.666742  4444.000000   4444.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
