--- a/APS02/CIFAR/Modelos.ipynb
+++ b/APS02/CIFAR/Modelos.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "((35000, 2500), (15000, 2500))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,9 +301,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 30min 47s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "          intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+       "          verbose=0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "svclassifier = LinearSVC()\n",
@@ -312,9 +333,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airplane</th>\n",
+       "      <th>automobile</th>\n",
+       "      <th>bird</th>\n",
+       "      <th>cat</th>\n",
+       "      <th>deer</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>frog</th>\n",
+       "      <th>horse</th>\n",
+       "      <th>ship</th>\n",
+       "      <th>truck</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.574206</td>\n",
+       "      <td>0.590769</td>\n",
+       "      <td>0.399304</td>\n",
+       "      <td>0.321023</td>\n",
+       "      <td>0.437086</td>\n",
+       "      <td>0.430493</td>\n",
+       "      <td>0.573123</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.656047</td>\n",
+       "      <td>0.596301</td>\n",
+       "      <td>0.517533</td>\n",
+       "      <td>0.514978</td>\n",
+       "      <td>0.514679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.549287</td>\n",
+       "      <td>0.596685</td>\n",
+       "      <td>0.417455</td>\n",
+       "      <td>0.354788</td>\n",
+       "      <td>0.437849</td>\n",
+       "      <td>0.426126</td>\n",
+       "      <td>0.553787</td>\n",
+       "      <td>0.557398</td>\n",
+       "      <td>0.659477</td>\n",
+       "      <td>0.580025</td>\n",
+       "      <td>0.517533</td>\n",
+       "      <td>0.513288</td>\n",
+       "      <td>0.513141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.601494</td>\n",
+       "      <td>0.584970</td>\n",
+       "      <td>0.382667</td>\n",
+       "      <td>0.293126</td>\n",
+       "      <td>0.436326</td>\n",
+       "      <td>0.434951</td>\n",
+       "      <td>0.593857</td>\n",
+       "      <td>0.586184</td>\n",
+       "      <td>0.652652</td>\n",
+       "      <td>0.613517</td>\n",
+       "      <td>0.517533</td>\n",
+       "      <td>0.517974</td>\n",
+       "      <td>0.517533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>1473.000000</td>\n",
+       "      <td>1477.000000</td>\n",
+       "      <td>1500.000000</td>\n",
+       "      <td>1542.000000</td>\n",
+       "      <td>1437.000000</td>\n",
+       "      <td>1545.000000</td>\n",
+       "      <td>1465.000000</td>\n",
+       "      <td>1491.000000</td>\n",
+       "      <td>1546.000000</td>\n",
+       "      <td>1524.000000</td>\n",
+       "      <td>0.517533</td>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>15000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              airplane   automobile         bird          cat         deer  \\\n",
+       "f1-score      0.574206     0.590769     0.399304     0.321023     0.437086   \n",
+       "precision     0.549287     0.596685     0.417455     0.354788     0.437849   \n",
+       "recall        0.601494     0.584970     0.382667     0.293126     0.436326   \n",
+       "support    1473.000000  1477.000000  1500.000000  1542.000000  1437.000000   \n",
+       "\n",
+       "                   dog         frog        horse         ship        truck  \\\n",
+       "f1-score      0.430493     0.573123     0.571429     0.656047     0.596301   \n",
+       "precision     0.426126     0.553787     0.557398     0.659477     0.580025   \n",
+       "recall        0.434951     0.593857     0.586184     0.652652     0.613517   \n",
+       "support    1545.000000  1465.000000  1491.000000  1546.000000  1524.000000   \n",
+       "\n",
+       "           accuracy     macro avg  weighted avg  \n",
+       "f1-score   0.517533      0.514978      0.514679  \n",
+       "precision  0.517533      0.513288      0.513141  \n",
+       "recall     0.517533      0.517974      0.517533  \n",
+       "support    0.517533  15000.000000  15000.000000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# avalia predicao\n",
     "y_pred = svclassifier.predict(X_test)\n",
@@ -332,20 +483,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2h 6min 3s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='poly', max_iter=-1, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.002, verbose=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "polysvclassifier = SVC(kernel='poly', tol=0.002)\n",
-    "polysvclassifier.fit(X_train.head(5000), y_train.head(5000))"
+    "polysvclassifier.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airplane</th>\n",
+       "      <th>automobile</th>\n",
+       "      <th>bird</th>\n",
+       "      <th>cat</th>\n",
+       "      <th>deer</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>frog</th>\n",
+       "      <th>horse</th>\n",
+       "      <th>ship</th>\n",
+       "      <th>truck</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.255061</td>\n",
+       "      <td>0.139888</td>\n",
+       "      <td>0.001330</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.189733</td>\n",
+       "      <td>0.007727</td>\n",
+       "      <td>0.020013</td>\n",
+       "      <td>0.007853</td>\n",
+       "      <td>0.201183</td>\n",
+       "      <td>0.175869</td>\n",
+       "      <td>0.1442</td>\n",
+       "      <td>0.099866</td>\n",
+       "      <td>0.099265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.500994</td>\n",
+       "      <td>0.278226</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.105215</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>0.441176</td>\n",
+       "      <td>0.162162</td>\n",
+       "      <td>0.597444</td>\n",
+       "      <td>0.398148</td>\n",
+       "      <td>0.1442</td>\n",
+       "      <td>0.348337</td>\n",
+       "      <td>0.350159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.171079</td>\n",
+       "      <td>0.093433</td>\n",
+       "      <td>0.000667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.964509</td>\n",
+       "      <td>0.003883</td>\n",
+       "      <td>0.010239</td>\n",
+       "      <td>0.004024</td>\n",
+       "      <td>0.120957</td>\n",
+       "      <td>0.112861</td>\n",
+       "      <td>0.1442</td>\n",
+       "      <td>0.148165</td>\n",
+       "      <td>0.144200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>1473.000000</td>\n",
+       "      <td>1477.000000</td>\n",
+       "      <td>1500.000000</td>\n",
+       "      <td>1542.0</td>\n",
+       "      <td>1437.000000</td>\n",
+       "      <td>1545.000000</td>\n",
+       "      <td>1465.000000</td>\n",
+       "      <td>1491.000000</td>\n",
+       "      <td>1546.000000</td>\n",
+       "      <td>1524.000000</td>\n",
+       "      <td>0.1442</td>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>15000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              airplane   automobile         bird     cat         deer  \\\n",
+       "f1-score      0.255061     0.139888     0.001330     0.0     0.189733   \n",
+       "precision     0.500994     0.278226     0.250000     0.0     0.105215   \n",
+       "recall        0.171079     0.093433     0.000667     0.0     0.964509   \n",
+       "support    1473.000000  1477.000000  1500.000000  1542.0  1437.000000   \n",
+       "\n",
+       "                   dog         frog        horse         ship        truck  \\\n",
+       "f1-score      0.007727     0.020013     0.007853     0.201183     0.175869   \n",
+       "precision     0.750000     0.441176     0.162162     0.597444     0.398148   \n",
+       "recall        0.003883     0.010239     0.004024     0.120957     0.112861   \n",
+       "support    1545.000000  1465.000000  1491.000000  1546.000000  1524.000000   \n",
+       "\n",
+       "           accuracy     macro avg  weighted avg  \n",
+       "f1-score     0.1442      0.099866      0.099265  \n",
+       "precision    0.1442      0.348337      0.350159  \n",
+       "recall       0.1442      0.148165      0.144200  \n",
+       "support      0.1442  15000.000000  15000.000000  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# avalia predicao\n",
     "y_pred = polysvclassifier.predict(X_test)\n",
